crashpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crasher
  namespace: lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crasher
  template:
    metadata:
      labels:
        app: crasher
    spec:
      containers:
      - name: crasher
        image: busybox
        command: ["sh", "-c", "exit 1"]
