deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: lab
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: ghcr.io/Laurint0/lab-k8s/web:latest
        ports:
        - containerPort: 80
        - containerPort: 443
